--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "figlet": "^1.6.0",
-    "fs": "^0.0.1-security",
+    "fs-extra": "^11.1.1",
     "prompt-sync": "^4.2.0"
   }
 }
