--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Matt Jones",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.1",
     "figlet": "^1.6.0",
     "fs-extra": "^11.1.1",
     "prompt-sync": "^4.2.0"
