--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "description": "Minimalistic WordPress theme generator",
   "main": "themegen.js",
   "scripts": {
-    "cleanup": "npm uninstall figlet fs-extra prompt-sync axios",
-    "themegen": "node axiosRequest.js"
+    "cleanupTheme": "npm uninstall figlet fs-extra prompt-sync axios",
+    "cleanupPlugins": "node cleanup.js",
+    "themegen": "node themegen.js"
   },
   "author": "Matt Jones",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.1",
+    "extract-zip": "^2.0.1",
     "figlet": "^1.6.0",
     "prompt-sync": "^4.2.0",
     "unzipper": "^0.10.14"
